@@ -41,7 +41,8 @@
 #define CART_SWXEGS_128	35
 #define CART_SWXEGS_256	36
 #define CART_SWXEGS_512	37
-#define CART_LAST_SUPPORTED 37
+#define CART_SWXEGS_1024 38
+#define CART_LAST_SUPPORTED 38
 
 #define CART_MAX_SIZE	(1024 * 1024)
 extern int cart_kb[CART_LAST_SUPPORTED + 1];
